hphp/hack/test/typecheck/new_inference/typehole/t30337175.php.like_types.exp
File "t30337175.php", line 14, characters 57-58:
You are trying to access the member Tc but this is not an object, it is a dynamic value (Typing[4062])
File "t30337175.php", line 14, characters 19-19:
Definition is here
File "t30337175.php", line 18, characters 3-5:
Some type constraint(s) here are violated (Typing[4062])
File "t30337175.php", line 14, characters 14-14:
'T' is a constrained type parameter
File "t30337175.php", line 14, characters 57-58:
You are trying to access the member Tc but this is not an object, it is a dynamic value
File "t30337175.php", line 14, characters 14-14:
Definition is here
File "t30337175.php", line 18, characters 3-5:
Some type constraint(s) here are violated (Typing[4062])
File "t30337175.php", line 14, characters 14-14:
'T' is a constrained type parameter
File "t30337175.php", line 14, characters 57-58:
You are trying to access the member Tc but this is not an object, it is a dynamic value
File "t30337175.php", line 14, characters 19-19:
Definition is here
File "t30337175.php", line 18, characters 3-5:
Some type constraint(s) here are violated (Typing[4062])
File "t30337175.php", line 14, characters 14-14:
'T' is a constrained type parameter
File "t30337175.php", line 14, characters 57-58:
You are trying to access the member Tc but this is not an object, it is a dynamic value
File "t30337175.php", line 14, characters 24-24:
Definition is here
